syntax="proto3";
package order;
option go_package= "github.com/meles-z/go-grpc-microsevice/order";

message Product{
    string id=1;
    string name =2;
    string description=3;
    double price=4;
    int64 stock_quantity=5;
}

message CreateProductRequest{
    Product product=1;
}
message CreateProductResponse{
    Product product=1;
}
message GetAllProductsRequest{

}
message GetAllProductsResponse{
    repeated Product product=1;
}
message GetProductByIdRequest{
    string id=1;
}
message GetProductByIdResponse{
    Product product=1;
}
message UpdateProductRequest{
    Product product=1;
}
message UpdateProductResponse{
    Product product =1;
}
message DeleteProductRequest{
    string id =1;
}
message DeleteProductResponse{
    bool success=1;
}

service ProductService{
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse);
    rpc GetProductById(GetProductByIdRequest) returns (GetProductByIdResponse);
    rpc UpdateProduct(UpdateProductRequest) returns( UpdateProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}